dai-run/gitops/environments/dev/service-course-recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dai-run-course-recommendation-service
  labels:
    app.kubernetes.io/name: dai-run-course-recommendation-service
    app.kubernetes.io/part-of: dai-run
    app.kubernetes.io/component: course-recommendation-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dai-run-course-recommendation-service
    dairun.io/track: blue
  ports:
    - name: http
      port: 8201
      targetPort: http
      protocol: TCP
