dai-run/gitops/environments/dev/service-shoe-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: dai-run-shoe-service-green
  labels:
    app.kubernetes.io/name: dai-run-shoe-service-green
    app.kubernetes.io/part-of: dai-run
    app.kubernetes.io/component: shoe-service
    dairun.io/track: green
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dai-run-shoe-service-green
    dairun.io/track: green
  ports:
    - name: http
      port: 8109
      targetPort: http
      protocol: TCP
